# thin_film_interference

./: .gitignore  CHANGELOG.md  Ellipsometer.py  Jenkinsfile.groovy  LICENSE.txt  Makefile  README.md  TE_and_TM.py  compare.py  ellipsometerService.py  ellipsometerUtils.py  example_brewsters.py  example_fabryperot.py  example_fabryperot_multi.py  example_fabryperot_single.py  example_psi_delta.py  field_plot.py  filmStackFactory.py  makefile  multimode_solver.py  multistack_field.py  multistack_solver.py  opticalPathDomain.py  pyproject.toml  requirements.txt  thinfilm.py  three_layer_field_plot.py  waveguide.py
ci/: Jenkinsfile.groovy
examples/: dispersive_media.py  simple_example.py
poc/: Makefile  fresnel.c  fresnel.h  main.c  single_film.c  single_film.h
requirements/: dev.txt
src/: ellipsometer.py  ellipsometerService.py  fresnel.py  opticalInterfaceDomain.py  optical_boundary.py  optical_path.py  transmissionAngleService.py  transmission_angles.py
test/: SoI_regressPro.txt  test_ellipsometer.py  test_fresnel.py  test_transmission_angles.py
tests/: test_Fresnel.py  test_ellipsometer.py  test_ellipsometerService.py  test_fresnel.py  test_opticalPathDomain.py  test_optical_path.py  test_thinfilm.py  test_transmissionAngleService.py  test_transmissionAngles.py  test_transmission_angles.py
thin_film_interference/: ellipsometer.py  fresnel.py
