[project]
dependencies = ["numpy>=1.23.4"]
name = "thin_film_interference"
version = "0.0.0"
authors = [
  { name="George Duffett" },
]
description = "Thin Film Interference"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/g-duff/thin_film_interference"
"Bug Tracker" = "https://github.com/g-duff/thin_film_interference/issues"
