[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dependencies = ["numpy>=1.23.4"]
name = "thin_film_interference"
version = "0.0.1"
authors = [
  { name="George Duffett" },
]
description = "Thin Film Interference"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["thin_film_interference*"]

[project.urls]
"Homepage" = "https://github.com/g-duff/thin_film_interference"
"Bug Tracker" = "https://github.com/g-duff/thin_film_interference/issues"
